# dukascopy-sqlite-downloader

./: .gitignore  README.md  download_dukascopy_sqlite.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_downloader.py
