[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dukascopy-sqlite-downloader"
version = "1.1.1"
description = "Resumable Dukascopy tick downloader with one SQLite database per FX symbol"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jlcbk" }]
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.9,<1"]

[project.scripts]
dukascopy-sqlite = "download_dukascopy_sqlite:main"

[tool.setuptools]
py-modules = ["download_dukascopy_sqlite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
